@@ -14,7 +14,7 @@
 <ul class="tx_egovapi_audiences">
 	<!-- ###AUDIENCE### [begin] -->
 	<li>
-		<!-- ###AUDIENCE_LINK_VIEWS### -->###AUDIENCE_NAME###<!-- ###AUDIENCE_LINK_VIEWS### -->
+		<span class="tx_egovapi_audienceName"><!-- ###AUDIENCE_LINK_VIEWS### -->###AUDIENCE_NAME###<!-- ###AUDIENCE_LINK_VIEWS### --></span>
 	</li>
 	<!-- ###AUDIENCE### [end] -->
 </ul>
