@@ -14,8 +14,8 @@
 <ul class="tx_egovapi_domains">
 	<!-- ###DOMAIN### [begin] -->
 	<li>
-		<!-- ###DOMAIN_LINK_TOPICS### -->###DOMAIN_NAME###<!-- ###DOMAIN_LINK_TOPICS### -->
-		(<!-- ###DOMAIN_LINK_DETAIL### -->details<!-- ###DOMAIN_LINK_DETAIL### -->)
+		<span class="tx_egovapi_domainName"><!-- ###DOMAIN_LINK_TOPICS### -->###DOMAIN_NAME###<!-- ###DOMAIN_LINK_TOPICS### --></span>
+		<span class="tx_egovapi_domainDetail">(<!-- ###DOMAIN_LINK_DETAIL### -->details<!-- ###DOMAIN_LINK_DETAIL### -->)</span>
 	</li>
 	<!-- ###DOMAIN### [end] -->
 </ul>
