@@ -14,8 +14,8 @@
 <ul class="tx_egovapi_topics">
 	<!-- ###TOPIC### [begin] -->
 	<li>
-		<!-- ###TOPIC_LINK_SERVICES### -->###TOPIC_NAME###<!-- ###TOPIC_LINK_SERVICES### -->
-		(<!-- ###TOPIC_LINK_DETAIL### -->details<!-- ###TOPIC_LINK_DETAIL### -->)
+		<span class="tx_egovapi_topicName"><!-- ###TOPIC_LINK_SERVICES### -->###TOPIC_NAME###<!-- ###TOPIC_LINK_SERVICES### --></span>
+		<span class="tx_egovapi_topicDetail">(<!-- ###TOPIC_LINK_DETAIL### -->details<!-- ###TOPIC_LINK_DETAIL### -->)</span>
 	</li>
 	<!-- ###TOPIC### [end] -->
 </ul>
