@@ -14,8 +14,8 @@
 <ul class="tx_egovapi_views">
 	<!-- ###VIEW### [begin] -->
 	<li>
-		###VIEW_ID###:
-		<!-- ###VIEW_LINK_DOMAINS### -->###VIEW_NAME###<!-- ###VIEW_LINK_DOMAINS### -->
+		<span class="tx_egovapi_viewId">###VIEW_ID###:</span>
+		<span class="tx_egovapi_viewName"><!-- ###VIEW_LINK_DOMAINS### -->###VIEW_NAME###<!-- ###VIEW_LINK_DOMAINS### --></span>
 	</li>
 	<!-- ###VIEW### [end] -->
 </ul>
@@ -23,7 +23,7 @@
 <!-- ###VIEWS### [end] -->
 
 <!-- ###HAS_PARENT### [begin] -->
-<p>
+<p class="tx_egovapi_backToList">
 	<!-- ###VIEW_LINK_AUDIENCES### -->###ACTION_BACK_TO_LIST###<!-- ###VIEW_LINK_AUDIENCES### -->
 </p>
 <!-- ###HAS_PARENT### [end] -->
