@@ -1,3 +1,7 @@
+2011-03-10  Xavier Perseguers  <xavier@causal.ch>
+
+	* Added CSS classes to standard templates
+
 2011-03-09  Xavier Perseguers  <xavier@causal.ch>
 
 	* Added feature #13710: Allow a service or a list of services to be specified by TypoScript
